feat: Implement user activity tracking with an admin monitoring interface for user engagement, online status, and email interactions.

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -19,6 +19,11 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+
+        # Fix for "upstream sent too big header" 502 errors
+        fastcgi_buffer_size 512k;
+        fastcgi_buffers 16 512k;
+        fastcgi_busy_buffers_size 512k;
     }
 
     location ~ /\.ht {
