--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@shadcn/ui": "^0.0.4",
     "laravel-vue-i18n": "^2.8.0",
     "lucide-vue-next": "^0.563.0",
-    "powerbi-client": "^2.23.9"
+    "powerbi-client": "^2.23.9",
+    "quill": "^1.3.7"
   }
 }
