--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name painel.jrspice.com;  # substitua '_' pelo seu domínio real
     root /var/www/html/public;
     client_max_body_size 20M;
 
@@ -9,24 +9,34 @@ server {
 
     index index.php index.html;
 
+    # Laravel routing
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # PHP-FPM
     location ~ \.php$ {
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
         include fastcgi_params;
+        fastcgi_pass app:9000;  # container PHP
+        fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
 
-        # Fix for "upstream sent too big header" 502 errors
+        # Evita erros 502 "upstream sent too big header"
         fastcgi_buffer_size 512k;
         fastcgi_buffers 16 512k;
         fastcgi_busy_buffers_size 512k;
+
+        # Timeout para long-polling/fila, importante se jobs demorarem
+        fastcgi_read_timeout 300;
+        fastcgi_send_timeout 300;
     }
 
+    # Protege arquivos ocultos
     location ~ /\.ht {
         deny all;
     }
+
+    # Redirect para HTTPS (opcional se configurar SSL depois)
+    # rewrite ^ https://$server_name$request_uri? permanent;
 }
